--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -32,8 +32,8 @@
     color: white;
     gap: 1vw;
 
-    .rank-text{
-      font-family: 'EvilEmpire';
+    .rank-text {
+      font-family: "EvilEmpire";
       font-size: 5vw;
     }
 
@@ -73,7 +73,7 @@
     // margin-top: 4vw;
     position: relative;
     top: -2vw;
-      .slider-dot {
+    .slider-dot {
       width: 2vw;
       height: 2vw;
       border-radius: 100%;
@@ -108,15 +108,14 @@
   .left-arrow {
     width: 9vw;
     height: 9vw;
-    background-image: url('../assets/images/battle/left-arrow.png');
+    background-image: url("../assets/images/battle/left-arrow.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
-
   }
   .right-arrow {
     width: 9vw;
     height: 9vw;
-    background-image: url('../assets/images/battle/left-arrow.png');
+    background-image: url("../assets/images/battle/left-arrow.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     transform: scaleX(-1);
@@ -180,7 +179,6 @@
   }
 }
 
-
 .gift-slider {
   width: 90%;
 
@@ -194,7 +192,7 @@
   position: relative;
   flex-direction: column;
 
-  .arrowsNRank{
+  .arrowsNRank {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -206,57 +204,52 @@
       width: 9vw;
     }
 
-    .rank{
+    .rank {
       font-size: 6vw;
-      font-family: 'EvilEmpire';
+      font-family: "EvilEmpire";
       color: white;
-
     }
-
   }
- .rews-content {
+  .rews-content {
     display: flex;
     // flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
     height: 79vw;
-    background-image: url('../assets/images/event-gifting/reward-bg.png');
+    background-image: url("../assets/images/event-gifting/reward-bg.png");
 
     width: 100%;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     position: relative;
 
-
-    .target-text{
+    .target-text {
       position: absolute !important;
       top: 16vw !important;
-  
     }
-      .reward-item {
-        display: flex;
-        flex-direction: column;
-        width: 25vw;
-        height: 29vw;
-        background-image: url("../assets/images/event-gifting/reward-box.png");
-        background-size: 100% 100%;
+    .reward-item {
+      display: flex;
+      flex-direction: column;
+      width: 25vw;
+      height: 29vw;
+      background-image: url("../assets/images/event-gifting/reward-box.png");
+      background-size: 100% 100%;
 
-        align-items: center;
+      align-items: center;
 
-        .reward-img {
-          width: 14vw;
-          position: relative;
-          top: 7vw;
-        }
-
-        .gift-rew-desc {
-          position: relative;
-          top: 14vw;
-          font-size: 2.6vw;
-        }
+      .reward-img {
+        width: 14vw;
+        position: relative;
+        top: 7vw;
       }
-    
+
+      .gift-rew-desc {
+        position: relative;
+        top: 14vw;
+        font-size: 2.6vw;
+      }
+    }
   }
 
   .indicators {
@@ -265,7 +258,7 @@
     // margin-top: 4vw;
     position: relative;
     top: -2vw;
-      .slider-dot {
+    .slider-dot {
       width: 2vw;
       height: 2vw;
       border-radius: 100%;
@@ -276,6 +269,93 @@
       background-color: white !important;
     }
   }
+}
 
+.game-slider {
+  width: 90%;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  //   background-image: url("../assets/images/rewards-bg.png");
+  //   height: 55vw;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  position: relative;
+
+  .rewards-text {
+    width: 30vw;
+    position: absolute;
+    top: 2vw;
+  }
+
+  .left-arrow {
+    width: 9vw;
+  }
+  .right-arrow {
+    width: 9vw;
+  }
+
+  .slider-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    gap: 1vw;
+
+    .rank-text {
+      font-family: "EvilEmpire";
+      font-size: 5vw;
+    }
+
+    .rew-container {
+      display: flex;
+      justify-content: center;
+      width: 60vw;
+      // border: 2px solid;
+      .reward-item {
+        display: flex;
+        flex-direction: column;
+        width: 23vw;
+        height: 22vw;
+        background-image: url("../assets/images/battle/reward-bg.png");
+        background-size: 100% 100%;
+
+        align-items: center;
+
+        .reward-img {
+          width: 10vw;
+          position: relative;
+          top: 4vw;
+        }
+
+        p {
+          position: relative;
+          top: 11vw;
+          font-size: 2vw;
+          width: 17vw;
+        }
+      }
+    }
+  }
+
+  .indicators {
+    display: flex;
+    gap: 1vw;
+    // margin-top: 4vw;
+    position: relative;
+    top: 10vw;
+    .slider-dot {
+      width: 2vw;
+      height: 2vw;
+      border-radius: 100%;
+      // border: 0.2vw solid yellow;
+      background-color: gray;
+    }
+    .active-dot {
+      background-color: white !important;
+    }
+  }
 }
